<resources>
    <string name="app_name">Phone Auto-Silencer (Premium)</string>
    <string name="action_settings">Settings</string>
    <string name="event_post_name">Event Name</string>
    <string name="start_time_post">Start Time</string>
    <string name="end_time_post">End Time</string>
    <string name="time_post">Time</string>
    <string name="ringer_post">Ringer</string>
    <string name="schedule_post">Schedule</string>
    <string name="monday_abrev">MO</string>
    <string name="tuesday_abrev">TU</string>
    <string name="wednesday_abrev">WE</string>
    <string name="thursday_abrev">TH</string>
    <string name="friday_abrev">FR</string>
    <string name="saturday_abrev">SA</string>
    <string name="sunday_abrev">SU</string>
    <string name="schedule_msg_post">(You may select more than one day.)</string>
    <string name="ringer_mode_post">Ringer</string>
    <string name="repeat_prompt">Repeat Option</string>
    <string name="silence_post">Silence</string>
    <string name="vibrate_post">Vibrate</string>
    <string name="cancel_post">Cancel</string>
    <string name="buy_premium_title">Buy Premium</string>
    <string name="buy_premium_content">You have reached a max amount of events. Buy premium for an unlimited amount of events!</string>
    <string name="buy_premium_positive">BUY PREMIUM</string>
    <string name="buy_premium_negative">CANCEL</string>
    <string name="market_id">market://details?id=com.justplaingoatappsgmail.phonesilencerpremium</string>
    <string name="market_id_browser">https://play.google.com/store/apps/details?id=com.justplaingoatappsgmail.phonesilencerpremium</string>
    <string name="play_store_error">Error: Could not open Android market, please install the market app.</string>
    <string-array name="repeat_array">
        <item>Weekly</item>
        <item>Once</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>
