<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_post_name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nametag" />

            <EditText
                android:id="@+id/timer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@color/mdtp_accent_color"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_post"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/clock" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/start_time_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/start_time_post"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/end_time_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/end_time_post"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@color/mdtp_accent_color"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_post"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/calender" />

            <Spinner
                android:id="@+id/repeat_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/repeat_array"
                android:paddingLeft="10dp"
                android:prompt="@string/repeat_prompt"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/monday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_text_view"
                android:gravity="center"
                android:text="@string/monday_abrev"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginRight="2dp"/>

            <TextView
                android:id="@+id/tuesday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_text_view"
                android:gravity="center"
                android:text="@string/tuesday_abrev"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginRight="2dp"/>

            <TextView
                android:id="@+id/wednesday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_text_view"
                android:gravity="center"
                android:text="@string/wednesday_abrev"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginRight="2dp"/>

            <TextView
                android:id="@+id/thursday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_text_view"
                android:gravity="center"
                android:text="@string/thursday_abrev"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginRight="2dp"/>

            <TextView
                android:id="@+id/friday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_text_view"
                android:gravity="center"
                android:text="@string/friday_abrev"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginRight="2dp"/>

            <TextView
                android:id="@+id/saturday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:background="@drawable/rounded_text_view"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/saturday_abrev"
                android:layout_weight="1"
                android:layout_marginRight="2dp"/>

            <TextView
                android:id="@+id/sunday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text_view"
                android:gravity="center"
                android:text="@string/sunday_abrev"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="All Days" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@color/mdtp_accent_color"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ringer_post"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ringer" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/silence_post"
                    android:layout_weight="0.2"
                    android:layout_marginLeft="15dp"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/vibrate_post"
                    android:layout_weight="0.8"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />

    </LinearLayout>

</ScrollView>